--- a/Hi.html
+++ b/Hi.html
@@ -1,3 +1,14 @@
-<h1>Hello! - Header 1</h1>
-<p>Hi! - Paragraph element</p>
-<a href="https://www.archlinux.org" target="_blank" title="I'm using Arch BTW">A shortcut to arch linux innit ;)</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>BULLSHIT</title>
+        <body>
+            <h1>Hello! - Header 1</h1>
+            <p>Hi! - Paragraph element</p>
+            <a href="https://www.archlinux.org" target="_blank" title="I'm using Arch BTW">A shortcut to <i><b>Arch linux</b><i> innit ;)</a>
+            <img src="https://opengraph.githubassets.com/3cccbc89c9315cf89d44c5764a27ac06c245f80a7a53aca0dfde64f328373aaa/pop-os/pop/issues/2263">
+            <p>My name is Gustavo. But you can call me - <br>
+            Gus</p>
+        </body>
+    </head>
+</html>
